--- a/style.css
+++ b/style.css
@@ -1,43 +1,52 @@
-/* Выдвинуть либо через opacity и z-index или через tansform: translate; */
+/* general CSS */
 
-/* 1 */
-
-.wrapper {
-  display: inline-block;
-  width: 300px;
-  height: 400px;
-  font-size: 0;
-  position: relative;
-  overflow: hidden;
+html, body {
+  margin: 10px;
 }
 
-.wrapper input {
+h1 {
+  text-align: center;
+}
+
+.using {
+  margin: 5px 0;
+  text-align: center;
+}
+
+[class^="wrapper"] {
+  width: 300px;
+  height: 400px;
+  position: relative;
+  overflow: hidden;
+  outline: 1px solid black;
+  margin: 0 auto;
+}
+
+[class^="wrapper"] input {
   display: none;
 }
 
-.slider__controls {
-  height: 20px;
-  text-align: center;
+[class^="wrapper"] .slider__controls {
+  display: flex;
+  justify-content: center;
+  width: 100%;
   position: absolute;
   left: 50%;
-  bottom: 0;
+  bottom: 2%;
   transform: translateX(-50%);
-  z-index: 1;
 }
 
-.slider__controls label {
-  content: "";   
-  display: inline-block;
-  margin-left: 5px;
+[class^="wrapper"] .slider__controls label {
+  content: "";
   position: relative;
-  bottom: 5px;
+  margin-right: 2px;
   width: 15px;
   height: 15px;
   border: 3px solid #435777;
   border-radius: 50%;
 }
 
-.slider__controls label::before {
+[class^="wrapper"] .slider__controls label::before {
   visibility: hidden;
   content: "";
   position: absolute;
@@ -53,124 +62,124 @@
 #a:checked ~ .slider__controls label[for="a"]::before,
 #b:checked ~ .slider__controls label[for="b"]::before,
 #c:checked ~ .slider__controls label[for="c"]::before,
-#d:checked ~ .slider__controls label[for="d"]::before {
+#d:checked ~ .slider__controls label[for="d"]::before,
+#o:checked ~ .slider__controls label[for="o"]::before,
+#p:checked ~ .slider__controls label[for="p"]::before,
+#q:checked ~ .slider__controls label[for="q"]::before,
+#r:checked ~ .slider__controls label[for="r"]::before,
+#s:checked ~ .slider__controls label[for="s"]::before,
+#t:checked ~ .slider__controls label[for="t"]::before,
+#u:checked ~ .slider__controls label[for="u"]::before,
+#w:checked ~ .slider__controls label[for="w"]::before{
   visibility: visible;
 }
 
-img {
+[class^="wrapper"] img {
   width: 100%;
 }
 
-span {
-  display: block;
+[class^="wrapper"] h2 {
+  margin: 0;
+  padding: 0;
   font-size: 20px;
+  font-weight: 400;
   background-color: gray;
   color: black;
   text-align: center;
   line-height: 30px;
 }
 
-.book {
+/* 1 and 2 */
+
+[class^="wrapper"] .book {
   position: absolute;
   top: 0;
   left: 0;
-  transform: translate(400px);
 }
 
+/* 1 */
 
+.wrapper1 .slider__controls  {
+  z-index: 1;
+}
+
+.wrapper1 .book {
+  transform: translate(400px);
+  transition-duration: 0.5s;
+}
 
 #a:checked ~ .wrapper__inner .book:nth-child(1),
 #b:checked ~ .wrapper__inner .book:nth-child(2),
 #c:checked ~ .wrapper__inner .book:nth-child(3),
 #d:checked ~ .wrapper__inner .book:nth-child(4){
   transform: translate(0);
-  transition-duration: 0.3s;
-} 
+}  
 
-/* Или через z-index*/
+
 /* 2 */
 
-/*.wrapper {
-  display: inline-block;
-  width: 300px;
-  height: 400px;
-  font-size: 0;
-  position: relative;
-  overflow: hidden;
+.wrapper2 .slider__controls {
+  z-index: 2;
 }
 
-.wrapper input {
-  display: none;
-}
-
-.slider__controls {
-  height: 20px;
-  text-align: center;
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  transform: translateX(-50%);
-  z-index: 3;
-}
-
-.slider__controls label {
-  content: "";   
-  display: inline-block;
-  margin-left: 5px;
-  position: relative;
-  bottom: 5px;
-  width: 15px;
-  height: 15px;
-  border: 3px solid #435777;
-  border-radius: 50%;
-}
-
-.slider__controls label::before {
-  visibility: hidden;
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  left: 2.5px;
-  top: 2.5px;
-  background-color: #435777;
-  border-radius: 50%;
-}
-
-#a:checked ~ .slider__controls label[for="a"]::before,
-#b:checked ~ .slider__controls label[for="b"]::before,
-#c:checked ~ .slider__controls label[for="c"]::before,
-#d:checked ~ .slider__controls label[for="d"]::before {
-  visibility: visible;
-}
-
-img {
-  width: 100%;
-}
-
-span {
-  display: block;
-  font-size: 20px;
-  background-color: gray;
-  color: black;
-  text-align: center;
-  line-height: 30px;
-}
-
-.book {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.book-1 {
+#o:checked ~ .wrapper__inner .book:nth-child(1),
+#p:checked ~ .wrapper__inner .book:nth-child(2),
+#q:checked ~ .wrapper__inner .book:nth-child(3),
+#r:checked ~ .wrapper__inner .book:nth-child(4){
   z-index: 1;
 }
 
-#b:checked ~ .wrapper__inner .book:nth-child(2),
-#c:checked ~ .wrapper__inner .book:nth-child(3),
-#d:checked ~ .wrapper__inner .book:nth-child(4){
-  z-index: 2;
-} */
+/* Того же эффекта можно достичь используя "visibility: hidden" или "display: none". Для демонстрации, закомментируйте блок кода под номером "2" и раскоментируйте код снизу */
+/* 
+[class^="wrapper"].wrapper2__inner .book {
+  visibility: hidden;
+}
+#o:checked ~ .wrapper2__inner .book:nth-child(1),
+#p:checked ~ .wrapper2__inner .book:nth-child(2),
+#q:checked ~ .wrapper2__inner .book:nth-child(3),
+#r:checked ~ .wrapper2__inner .book:nth-child(4) {
+  visibility: visible;
+} 
+*/
 
 
+/* 3 */
+
+.wrapper3__inner {
+  overflow: visible;
+  font-size: 0;
+}
+
+.wrapper3 .slider__controls {
+   z-index: 1;
+}
+
+.wrapper3 .book  {
+  position: static;
+  display: inline-block;
+  overflow: hidden;
+  width: 300px;
+  height: 400px;
+}
+
+.wrapper3__inner  {
+  width: 100%;
+  height: 100%;
+  transition-duration: 0.25s;
+}
+
+#s:checked ~ .wrapper3__inner  {
+  transform: translateY(0px);
+}
+
+#t:checked ~ .wrapper3__inner {
+  transform: translateY(-400px);
+}
+
+#u:checked ~ .wrapper3__inner {
+  transform: translateY(-800px);
+}
+
+#w:checked ~ .wrapper3__inner {
+  transform: translateY(-1200px);
+}  
